# niimbot-sticker-mcp

./: .gitignore  README.md  mockup_stickers.py  pyproject.toml
data/: label_db.json
docs/: RESEARCH.md  mcp_server_spec.md  popup_app_handoff.md  printer_specs.md  usb_transport.md
mac-app/: Package.swift  build_app.sh  generate_icon.py  run_app.sh
mac-app/Sources/NiimbotPopup/: ContentView.swift  NiimbotPopupApp.swift  PopupPanelController.swift
mac-app/Sources/NiimbotPopup/Models/: StickerDraft.swift
mac-app/Sources/NiimbotPopup/Services/: BackendBridge.swift
mac-app/Sources/NiimbotPopup/ViewModels/: AppViewModel.swift
mac-app/Tests/NiimbotPopupTests/: AppViewModelTests.swift
src/niimbot/: __init__.py  ble.py  labels.py  printing.py  usb.py
src/niimbot/app_backend/: __init__.py  __main__.py  agent.py  mcp_client.py  protocol.py
src/niimbot/daemon/: __init__.py  __main__.py  client.py  connection.py  server.py
src/niimbot/mcp/: renderer.py  server.py
src/niimbot/tools/: calibrate.py  fast_print.py  test_combos.py
tests/: test_app_backend.py  test_mcp_server.py
